Fix glitched chunks and add message screen. Message screen is added for when the world saves after exiting the world. Also added a custom file path for when the game is packaged.